# rust-visual-art

./: .gitignore  .midi-input-config  2  Cargo.toml  README.md  bild.rs  build.rs  config.toml  default_user_save_state.toml  save_states.toml  watch.sh
build_script/: Cargo.toml
lib/: 1_spiral.rs  2_v2.rs  3_waves.rs  4_audio.rs  5_solid.rs  6_something.rs  v2.rs  waves.rs
src/: args.rs  audio.rs  audio_processor.rs  loading.rs  main.rs  midi.rs  mutstate.rs  save_state.rs  utils.rs
