[package]
name = "rust-visual-art"
version = "0.1.0"
edition = "2021"

[dependencies]
nannou = "0.19"
nannou_audio = "0.19"
ringbuf = "0.4"

toml = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }

portmidi = "0.3"

byteorder = "1.5"
rustfft = "6.2"

libloading = "0.8"
notify = "8.0"
memprint = "0.2.0"
serde_json = "1.0.142"
serialport = "4.7.3"
palette = "0.7.6"


[profile.release]
lto = true
codegen-units = 1
opt-level = 2
debug = false
panic = "abort"
overflow-checks = false
